fix footer content alignment

--- a/components/article/fullscreen_article.styl
+++ b/components/article/fullscreen_article.styl
@@ -61,11 +61,23 @@ body.body-fullscreen-article
     margin-bottom: 20px
   .article-sa-artsy-logo
     color: white
-    margin-bottom: 100px
+
+    width: 163px
+    max-height: 50px
+    display: inline-block
+    vertical-align: top
+    font-size: 50px
+
+  .article-sa-primary-logo
+    img
+      height: 50px
+      margin-top: -10px
+
   .article-sa-primary-logos
     position: absolute
     z-index: 1
     top: 80px
+    left: 0px
   .article-sa-related-container
     position: absolute
     top: 0px
