--- a/components/article/super_article.styl
+++ b/components/article/super_article.styl
@@ -2,18 +2,15 @@
 
 .article-sa-footer
   margin-bottom: 100px
+  display: flex
   .article-sa-title
     font-size: 50px
     display: block
 
 .article-sa-footer-left, .article-sa-footer-right
-  display: inline-block
-  vertical-align: top
+  flex: 1
   width: 50%
   min-height: 300px
-  height: 100%
-  position: relative
-  z-index: 2
 
 .article-sa-title
   font-size: 72px
